Cosmetic changes: instructions text, drop-down overlapping issue, error messages, punctuation marks added.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 
 .dropdown {
-  width: 125% !important;
+  width: 135% !important;
 }
 
 #dropdownMenu1 {
